force-app/main/default/objects/Participation_Activity_Profile_Data__c/Participation_Activity_Profile_Data__c.object-meta.xml
<CustomObject>
    <label>Participation Activity Profile Data</label>
    <nameField>
        <label>NSO Participation Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participation Activity Profile Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>