force-app/main/default/objects/Participation_Activity_Profile_Data__c/fields/Deliverable_Indicator_del__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Indicator_del__c</fullName>
    <label>Deliverable Indicator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>