force-app/main/default/objects/Participation_Activity_Profile_Data__c/fields/Duration_Per_Week_minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Per_Week_minutes__c</fullName>
    <label>Duration Per Week (minutes)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>