force-app/main/default/objects/Participation_Activity_Profile_Data__c/fields/Members__c.field-meta.xml
<CustomField>
    <fullName>Members__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if a participant in the activity has to be a member of the NSO to be able to participate. For example, a holiday programme participant does not need to be a member of the NSO to participate.</inlineHelpText>
    <label>Members</label>
    <type>Checkbox</type>
</CustomField>