force-app/main/default/objects/Participation_Activity_Profile_Data__c/fields/Membership_Category_of_your_NSO__c.field-meta.xml
<CustomField>
    <fullName>Membership_Category_of_your_NSO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this activity is a membership category then it will appear in analysis of members without it being necessary to also enter information using the NSO membership categories list and related form/s.</inlineHelpText>
    <label>Membership Category of your NSO</label>
    <type>Checkbox</type>
</CustomField>