force-app/main/default/objects/Participation_Activity_Profile_Data__c/fields/NSO_Participation_Category__c.field-meta.xml
<CustomField>
    <fullName>NSO_Participation_Category__c</fullName>
    <formula>If(CONTAINS($User.Profile_Name__c,&apos;Partner&apos;),
HYPERLINK(&quot;/partners2/apex/Participation_Data?id=&quot;+Id,Name,&quot;_self&quot;),HYPERLINK(&quot;/apex/Participation_Data?id=&quot; +Id,Name,&quot;_self&quot;))</formula>
    <label>NSO Participation Category</label>
    <type>Text</type>
</CustomField>