force-app/main/default/objects/Participation_Activity_Profile_Data__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Participation Activity Profile Data</relationshipLabel>
    <relationshipName>Participation_Activity_Profile_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>