force-app/main/default/objects/Participation_Activity_Profile_Data__c/fields/Participation_Event__c.field-meta.xml
<CustomField>
    <fullName>Participation_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if this activity is a participation event, e.g. round the bays, triathlon</inlineHelpText>
    <label>Participation Event</label>
    <type>Checkbox</type>
</CustomField>