force-app/main/default/objects/Participation_Activity_Profile_Data__c/fields/Percentage_of_Adults__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Adults__c</fullName>
    <label>Percentage of Adults</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>