force-app/main/default/objects/Participation_Activity_Profile_Data__c/fields/Sessions_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Per_Week__c</fullName>
    <label>Sessions Per Week</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>