force-app/main/default/objects/Participation_Activity_Profile_Data__c/fields/Sport_NZ_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Sport_NZ_Outcomes__c</fullName>
    <label>Sport NZ Outcomes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Young girls (10 – 18)</fullName>
            </value>
            <value>
                <fullName>Young People (5 – 18) in lower socio economic areas (including Maori)</fullName>
            </value>
            <value>
                <fullName>Asian – Indian</fullName>
            </value>
            <value>
                <fullName>Asian – Chinese</fullName>
            </value>
            <value>
                <fullName>Asian – Other</fullName>
            </value>
            <value>
                <fullName>Pacifica – Samoan</fullName>
            </value>
            <value>
                <fullName>Pacifica - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>