force-app/main/default/objects/Participation_Activity_Profile_Data__c/fields/Total_Participants_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Participants_This_Year__c</fullName>
    <label>Total Participants This Year</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>