force-app/main/default/objects/Participation_Activity_Profile_Data__c/fields/Upper_Age_Limit__c.field-meta.xml
<CustomField>
    <fullName>Upper_Age_Limit__c</fullName>
    <label>Upper Age Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>