force-app/main/default/objects/Participation_Activity_Profile_Data__c/fields/Weeks__c.field-meta.xml
<CustomField>
    <fullName>Weeks__c</fullName>
    <label>Weeks</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>