force-app/main/default/objects/Participation_Activity_Profile_Data__c/recordTypes/Partner_User.recordType-meta.xml
<RecordType>
    <fullName>Partner_User</fullName>
    <active>true</active>
    <label>Partner User</label>
</RecordType>