force-app/main/default/objects/Participation_Activity_Profile_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NSO_Participation_Category__c</columns>
    <columns>Total_Participants_Previous_Year__c</columns>
    <columns>Total_Participants_This_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>